--- a/password_wizard/index.html
+++ b/password_wizard/index.html
@@ -173,10 +173,9 @@ button:after {
             } else {
                 document.getElementById("errorold").innerText = "Incorrect Old Password";
             }
-
-            document.getElementById("old_pass").value = "";
-            document.getElementById("new_pass").value = "";
-            document.getElementById("confirm_pass").value = "";
+            old_pass.value = "";
+            new_pass.value = "";
+            confirm_pass.value = "";
         });
     </script>
 </body>
