--- a/slider/slider.html
+++ b/slider/slider.html
@@ -3,156 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Full Screen Image Slider</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            overflow: hidden; /* Prevents scroll issues */
+        }
+        .sliderpart {
+            display: flex;
+            width: 100vw;
+            height: 100vh;
+            position: relative;
+            overflow: hidden;
+        }
+        .slider-container {
+            display: flex;
+            width: 600vw; /* 6 images * 100vw */
+            height: 100vh;
+            transition: transform 0.5s ease-in-out;
+        }
+        .slider {
+            width: 100vw;
+            height: 100vh;
+        }
+        .slider img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .arrow {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 20px;
+        }
+        .arrow button {
+            font-size: 20px;
+            padding: 10px 20px;
+            cursor: pointer;
+            border: none;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+        }
+    </style>
 </head>
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-    .sliderpart{
-        display: flex;
-        width: 100%;
-        position: relative;
-         overflow: hidden; 
-    }
- .slider img{
-    height: 600px;
-    width: 100vw;
-    height: 100vh;
- }
- .slider img{
-    transition: transform 0.5s ease;
- }
- .arrow button{
-    font-size: 20px;
-    padding: 10px 20px;
- }
- .arrow{
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    /* margin-top: -60px; */
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    right: 50%;
-  }
-</style>
 <body>
-<div class="sliderpart">
-    <div class="slider" id="s1">
-        <img src="images/s1.jpg" class="images" id="tryimg">
-    </div>
-    <div class="slider" id="s2">
-        <img src="images/s2.webp" class="images">
-    </div>
-    <div class="slider" id="s3">
-        <img src="images/s3.jpg" class="images">
-    </div>
 
-    <div class="slider" id="s4">
-        <img src="images/s1.jpg" class="images">
-    </div>
-    <div class="slider" id="s5">
-        <img src="images/s2.webp" class="images">
-    </div>
-    <div class="slider" id="s6">
-        <img src="images/s3.jpg" class="images">
+<div class="sliderpart">
+    <div class="slider-container" id="sliderContainer">
+        <div class="slider"><img src="images/portfolio_2.jpeg" alt="Image 1"></div>
+        <div class="slider"><img src="images/portfolio_3.jpeg" alt="Image 2"></div>
+        <div class="slider"><img src="images/portfolio_4.jpeg" alt="Image 3"></div>
+        <div class="slider"><img src="images/s1.jpg" alt="Image 4"></div>
+        <div class="slider"><img src="images/s3.jpg" alt="Image 6"></div>
     </div>
 </div>
-<center class="arrow">
-<button id="left" ><</button>
-<button id="right" >></button>
-</center>
+
+<div class="arrow">
+    <button id="left"><</button>
+    <button id="right">></button>
+</div>
 
 <script>
+    let currentIndex = 0;
+    let totalSlides = document.querySelectorAll(".slider").length;
+    let sliderContainer = document.getElementById("sliderContainer");
 
-// let myarray = ["images/s1.jpg", "images/s2.webp", "images/s3.jpg", "images/s1.jpg", "images/s2,webp", "imgaes/s3.jpg"]
+    document.getElementById("right").addEventListener("click", function () {
+        currentIndex++;
+        if (currentIndex >= totalSlides) currentIndex = 0;
+        sliderContainer.style.transform = `translateX(-${currentIndex * 100}vw)`;
+    });
 
-// let num = 0;
-// console.log(num)
-// for(let i = 0; i <= num; i++){
-//     document.getElementById("tryimg").setAttribute("src", myarray[i]);
-//     if(num >= 0){
-//     num++;
-// }else{
-//     break;
-// }
-// }
-
-
-// let num = 0; 
-
-//     function myfuncright(){
-//         num++;
-//         console.log(num)
-//         if(num > 5){
-//             num = 0;
-//         }
-//         else{
-//             document.getElementsByClassName("images")[num].style.marginLeft = "-100vw"   
-
-//         }
-        
-
-//     }
-
-//     function myfuncleft() {
-//     num--;
-//     console.log(num);
-//     if (num < 0) {
-//         num = 5;
-
-//     }
-//     else{
-//         document.getElementsByClassName("images")[num].style.marginRight = "100vw"
-
-//     }
-// }
-
-let leftbtn = document.getElementById("left");
-let rightbtn = document.getElementById("right");
-
-let slidersec = document.querySelectorAll(".slider"); 
-
-let transitionright = 100; 
-
-rightbtn.addEventListener("click", function (e) {
-    
-    for (let i = 0; i < slidersec.length; i++) { 
-        slidersec[i].style.transform = `translateX(-${transitionright}%)`; 
-        slidersec[i].style.transition = "transform 0.5s ease-in-out"; 
-
-        console.log("Index:", i);
-        console.log("Transition Value:", transitionright);
-        console.log(slidersec.length)
-    }
-
-    transitionright += 100; 
-});
-
-
-
-let transitionleft = 0;
-
-leftbtn.addEventListener("click", function (e) {
-
-
-    for (let i = 0; i < slidersec.length; i++) { 
-        slidersec[i].style.transform = `translateX(${transitionleft}%)`; 
-        slidersec[i].style.transition = "transform 0.5s ease-in-out"; 
-    }
-
-    console.log("Transition Value:", transitionleft);
-    console.log("Total Slides:", slidersec.length);
-
-    transitionleft += 100; 
-
-});
-
-
+    document.getElementById("left").addEventListener("click", function () {
+        currentIndex--;
+        if (currentIndex < 0) currentIndex = totalSlides - 1;
+        sliderContainer.style.transform = `translateX(-${currentIndex * 100}vw)`;
+    });
 </script>
-</body>
 
+</body>
 </html>
