--- a/task-manager/add_task.html
+++ b/task-manager/add_task.html
@@ -6,14 +6,14 @@
     <title>Task Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#121212] text-white flex h-screen">
+<body class="bg-[#121212] text-white flex h-auto">
     <!-- Sidebar -->
-    <aside class="w-64 bg-[#1a1a1a] shadow-lg p-5 flex flex-col justify-between">
+    <aside class="w-64 bg-[#1a1a1a] shadow-lg p-5 flex flex-col">
         <div>
             <h1 class="text-xl font-bold text-purple-400">OneClick<span class="text-white">/Done</span></h1>
             <nav class="mt-6">
                 <ul class="space-y-4">
-                     <a href="index2.html"><li class="p-2 rounded-md text-gray-300 font-semibold cursor-pointer hover:bg-gray-700">All Tasks</li></a>
+                    <a href="index.html"><li class="p-2 rounded-md text-gray-300 font-semibold cursor-pointer hover:bg-gray-700">All Tasks</li></a>
                     <li class="p-2 rounded-md text-gray-400 cursor-pointer hover:bg-gray-700">Team</li>
                     <li class="p-2 rounded-md text-gray-400 cursor-pointer hover:bg-gray-700">Company</li>
                     <li class="p-2 rounded-md text-gray-400 cursor-pointer hover:bg-gray-700">Messages</li>
@@ -24,10 +24,11 @@
             </nav>
         </div>
     </aside>
-    
- 
-    <main class="flex-1 w-full flex justify-center items-center h-auto py-[100px]">
-        <div class="bg-[#1a1a1a] p-6 rounded-lg shadow-lg w-96">
+
+    <!-- Main Content -->
+    <main class="flex flex-col w-full p-6 space-y-6">
+        <!-- Task Form -->
+        <div class="bg-[#1a1a1a] p-6 rounded-lg shadow-lg w-full max-w-lg mx-auto">
             <h2 class="text-lg font-bold mb-4">Add New Task</h2>
             <div>
                 <label class="block mb-2">Task Name</label>
@@ -48,6 +49,37 @@
                 
                 <button class="w-full bg-purple-600 text-white p-2 rounded hover:bg-purple-700 transition" id="add-task">Add Task</button>
             </div>
+        </div>
+
+        <!-- Task Table -->
+        <div class="bg-[#1f1f1f] p-6 rounded-lg shadow-lg overflow-x-auto">
+            <h2 class="text-lg font-bold mb-4">Task List</h2>
+            <table class="w-full border-collapse">
+                <thead>
+                    <tr class="border-b border-gray-700 h-[58px]">
+                        <th class="text-left py-2">Designer</th>
+                        <th class="text-left py-2">Task</th>
+                        <th class="text-left py-2">Status</th>
+                        <th class="text-left py-2">Priority</th>
+                        <th class="text-left py-2">Last Update</th>
+                        <th class="text-left py-2">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="table_body">
+                    <!-- Example Row -->
+                    <tr class="border-b border-gray-700">
+                        <td class="py-2">Alana Zielinski</td>
+                        <td class="py-2">Landing Page Design</td>
+                        <td class="py-2 text-green-400">Done</td>
+                        <td class="py-2 text-red-400">High</td>
+                        <td class="py-2">Yesterday</td>
+                        <td class="py-2">
+                            <button class="bg-green-500 text-white px-2 py-1 rounded">Complete</button>
+                            <button class="bg-red-500 text-white px-2 py-1 rounded ml-2">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
 
