--- a/frost-bento-agency-webpage/index.html
+++ b/frost-bento-agency-webpage/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Great+Vibes&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-main">
@@ -36,6 +39,16 @@
         <div class="right-learnmore-btn">
             <div class="round">
               <img src="images/btn-le.png">
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="left-design">
+            <div class="meta-top">
+                <h1 class="de">DE<span class="sign">SIGN</span></h1>
+            </div>
+            <div class="meta-bottom">
+                <a href="#">EXPLORE <span class="exarrow"><img src="images/exarrow.svg"></span></a>
             </div>
         </div>
     </div>
