--- a/frost-bento-agency-webpage/index.html
+++ b/frost-bento-agency-webpage/index.html
@@ -51,10 +51,55 @@
                 <a href="#">EXPLORE <span class="exarrow"><img src="images/exarrow.svg"></span></a>
             </div>
         </div>
+        <div class="right-design">
+            <div class="timgbox">
+               <img src="images/t1.jpg" class="timg">
+            </div>
+            <div class="timgbox">
+               <img src="images/t2.jpg" class="timg">
+            </div>
+            <div class="timgbox">
+               <img src="images/t3.jpg" class="timg">
+            </div>
+        </div>
     </div>
     </div>
         <!-- <img src="images/banner-top.png" class="banner-img"> -->
        
     </header>
+
+    <section class="ad">
+      <div class="topad">
+        <img src="images/p1.png" class="contrast">
+        <img src="images/p2.png">
+        <img src="images/p3.png">
+        <img src="images/p4.png">
+      </div>
+      <div class="bottomad">
+        <img src="images/p5.png">
+        <img src="images/p6.png">
+        <img src="images/p7.png">
+        <img src="images/p8.png">
+
+      </div>
+    </section>
+
+    <section class="main-title">
+    <div class="container-title">
+        <div class="top-title">
+        <p class="smallhead">SERVICES</p>
+        <h1 class="title">TRANSFORM</h1>
+        <h1 class="outline">CREATIVE</h1>
+        <h1 class="title">DESIGN</h1>
+    </div>
+    <div class="bottom-title">
+        <div class="subtitle">WE'RE DEDICATED TO DESIGN THAT FUELS TRANSFORMATION.</div>
+    </div>
+    </div>
+    </section>
+
+    <section>
+        
+    </section>
 </body>
 </html>
